<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/update_interval_key"
        android:title="@string/update_interval_title"
        android:dialogTitle="@string/update_interval_title"
        android:summary="@string/update_interval_summary"
        android:entries="@array/pref_update_interval_entries"
        android:entryValues="@array/pref_update_interval_entry_values"
        android:defaultValue="@string/update_interval_default_value" />
    <PreferenceScreen
        android:title="@string/servers"
        android:summary="@string/add_remove_servers">
        <intent android:action=".preferences.ServersActivity"/>
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/preferences_notifications_title"
        android:summary="@string/preferences_notifications_summary">
        <intent android:action=".preferences.NotificationsPreferencesActivity"/>
    </PreferenceScreen>
</PreferenceScreen>
