<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="?android:attr/windowBackground">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/tr_abc_text_size_large_material"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/welcome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_layout_margin"
        android:layout_marginLeft="@dimen/default_layout_margin"
        android:layout_marginRight="@dimen/default_layout_margin"
        android:paddingLeft="@dimen/default_padding"
        android:paddingRight="@dimen/default_padding"
        android:paddingBottom="@dimen/default_padding"
        android:textSize="@dimen/tr_abc_text_size_medium_material"
        android:textColor="?android:attr/textColorSecondary"
        android:text="@string/enter_server_parameters"/>
    <Button android:id="@+id/add_server_button"
        android:layout_width="@dimen/default_button_with_icon_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_layout_margin"
        android:drawableLeft="@drawable/ic_add_accent"
        android:drawableStart="@drawable/ic_add_accent"
        android:textSize="@dimen/tr_abc_text_size_button_material"
        android:onClick="openAddServerActivity"
        android:text="@string/add_server"/>
</LinearLayout>
