<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">
    <TextView android:id="@+id/error_message"
        android:layout_width="0dp"
        app:layout_widthPercent="80%"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/tr_abc_text_size_title_material"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="0dp"
        app:layout_widthPercent="65%"
        android:layout_height="wrap_content"
        android:layout_below="@id/error_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_layout_margin"
        android:padding="@dimen/default_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <Button android:id="@+id/server_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tr_abc_text_size_button_material"
            android:text="@string/server_settings"/>
        <Button android:id="@+id/network_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tr_abc_text_size_button_material"
            android:text="@string/network_settings"/>
        <Button android:id="@+id/retry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tr_abc_text_size_button_material"
            android:text="@string/retry"/>

    </LinearLayout>
</android.support.percent.PercentRelativeLayout>
